Changes in mirt 0.7.2

NEW FEATURES

- EM tolerance (TOL argument) default dropped to .0001 (originally .001), and SEM default tolerance 
  dropped to 1e-5 (originally 1e-4)

- type = 'score' and type = 'infoSE' added to plot() generic for expected total score and joint test
  standard error/information 

- custom latent mean and covariance matrix can be passed to fscores() for EAP, MAP, and EAPsum methods.
  Also applies to personfit() and itemfit() diagnostics 

- scores.only option to fscores() for returning just the estimated factor scores 

- bfactor can include NA values in the model to omit the estimation of specific factors for the 
  corresponding item

BUG FIXES

- missing data gradient bug fix in MH-RM for dichotomous item models

- global df fix for multidimensional confirmatory models 

- bfactor SEM information matrix fixed

- SEM information matrix computed with more accuracy (M-step was not identical to original EM)


Changes in mirt 0.7.0

NEW FEATURES

- new '#PLNRM' models to fit Suh & Bolt (2010) nested logistic models 

- 'large' option added to estimation functions. Useful when the datasets being analysed are very 
  large and organizing the data becomes a computationally burdensome task that should be avoided when
  fitting new models. Also, overall faster handling of datasets  

- plot(), fitted(), and residuals() generic support added for MultipleGroup objects

- CFI and X2 model statistics added, and output now includes fit stats w.r.t. both G2 and X2

- z stats added for itemfit/personfit infit and outfit statistics

- supplemented EM ('SEM') added for calculating information matrix from EM history. By default 
  the TOL value is dropped to help make the EM iterations longer and more stable. Supports
  parallel computing

- added return empirical reliability (returnER) option to fscores() 

- plot() supports individual item information trace lines on the same graph (dichotomous items only) with
  the option type = 'infotrace'
