@@ -15,6 +15,9 @@
 #' @param CE logical; plot confidence envelope?
 #' @param CEalpha area remaining in the tail for confidence envelope. Default gives 95\% confidence region
 #' @param CEdraws draws number of draws to use for confidence envelope
+#' @param drop.zeros logical; drop slope values that are numerically close to zero to reduce dimensionality?
+#' Useful in objects returned from \code{\link{bfactor}} or other confirmatory models that contain several 
+#' zero slopes
 #' @param ... additional arguments to be passed to lattice
 #' @author Phil Chalmers \email{rphilip.chalmers@@gmail.com}
 #' @keywords plot
@@ -47,13 +50,13 @@
 #'     }
 #'
 itemplot <- function(object, item, type = 'trace', degrees = 45, CE = FALSE, CEalpha = .05,
-                     CEdraws = 1000, ...){
+                     CEdraws = 1000, drop.zeros = FALSE, ...){
     if(is.list(object)) inames <- colnames(object[[1]]@data)
     else inames <- colnames(object@data)
     ind <- 1:length(inames)
     if(!is.numeric(item)) item <- ind[inames == item]
     ret <- itemplot.internal(object=object, item=item, type=type, degrees=degrees, CE=CE,
-                             CEalpha=CEalpha, CEdraws=CEdraws, ...)
+                             CEalpha=CEalpha, CEdraws=CEdraws, drop.zeros=drop.zeros, ...)
     if(is.null(ret)) return(invisible(ret))
     else return(ret)
 }
