@@ -23,7 +23,9 @@
 #' }
 probtrace <- function(x, Theta){
     if(is(Theta, 'vector')) Theta <- as.matrix(Theta)
-    if(!is.matrix(Theta)) stop('Theta input must be a matrix')
+    if(!is.matrix(Theta)) stop('Theta input must be a matrix')    
+    if(ncol(Theta) != x@nfact)
+        stop('Theta does not have the correct number of dimensions')
     P <- ProbTrace(x=x, Theta=Theta)
     cats <- 1:ncol(P)
     if(ncol(P) == 2) cats <- cats - 1
